--- a/assets/css/tooplate-main.css
+++ b/assets/css/tooplate-main.css
@@ -77,13 +77,13 @@ a {
 }
 .bg-dark {
 	background-color: #fff!important;
-	border-bottom: 1px solid #fff;
+	border-bottom: 50px solid #fff;
 }
 #navbarResponsive {
 	z-index: 999;
 	position: absolute;
 	left: 50%;
-	top: 105px;
+	top: 50px;
 	transform: translateX(-50%);
 }
 .navbar-dark .navbar-nav .nav-item {
@@ -93,7 +93,7 @@ a {
 	text-transform: uppercase;
 	font-size: 15px;
 	font-weight: 700;
-	color: #FEC8D8;
+	color: #FEC8D8; /* navbar text colour */
 	transition: all 0.5s;
 }
 .navbar-dark .navbar-nav .nav-link:hover,
@@ -106,7 +106,7 @@ a {
 .navbar:after {
 	width: 100%;
 	height: 1px;
-	background-color: #eee;
+	background-color: #fff;
 	content: '';
 	position: absolute;
 	left: 0;
@@ -132,19 +132,24 @@ a {
 /* Banner Style */
 .banner {
 	margin-top: 50px;
-	background-image: url(../images/banner-bg.jpg);
+	margin-bottom: 50px;
+	background-image: url(../images/banner-bg2.jpg); /*Background image*/
 	background-size: cover;
 	background-repeat: no-repeat;
 	padding: 150px 0px;
 	background-position: center center;
+	height: 800px;
 }
+/* .banner .right-image img { 
+	max-width: 100%;
+} */ /* over image */
 .banner .caption {
-	background-color: rgba(250,250,250,0.9);
+	background-color: #ffffff80;
 	padding: 30px;
 	max-width: 450px;
 }
 .banner .caption h2 {
-	margin-top: 0px;
+	margin-top: 10px;
 	margin-bottom: 15px;
 	font-size: 24px;
 	font-weight: 700;
@@ -225,8 +230,7 @@ a {
 }
 .footer .logo img {
 	max-width: 100%;
-	margin-top: 60px;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 }
 .footer .footer-menu {
 	margin-bottom: 40px;
@@ -302,7 +306,7 @@ a {
 	transition: all 0.5s;
 }
 .featured .featured-item:hover h4 {
-	color: #3a8bcd;
+	color: #D291BC;
 }
 #filter button {
 	outline: none;
